[gd_scene load_steps=4 format=3 uid="uid://bimvs0t1lqby0"]

[ext_resource type="Script" path="res://actors/player/player_camera_mount.gd" id="1_vec3f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6oyec"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_vhfg3"]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[node name="player_camera_mount" type="Node3D"]
top_level = true
script = ExtResource("1_vec3f")

[node name="head" type="Node3D" parent="."]

[node name="obstruction_ray" type="RayCast3D" parent="head"]
target_position = Vector3(0, 4, 6)

[node name="mount_max" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 6)

[node name="camera_mount" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 4, 6)

[node name="Camera3D" type="Camera3D" parent="head/camera_mount"]
metadata/_edit_lock_ = true

[node name="RayCast3D" type="RayCast3D" parent="head/camera_mount"]
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="aim_dot" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_6oyec")
mesh = SubResource("SphereMesh_vhfg3")
